--- a/class_workspace_spring_v4/src/main/resources/application-prod.yml
+++ b/class_workspace_spring_v4/src/main/resources/application-prod.yml
@@ -5,5 +5,11 @@ server:
       charset: utf-8
   port: 5000
 
+# ERROR > WARN > INFO > DEBUG > TRACE
+logging:
+  level:
+    root: WARN
+    com.tenco.blog: INFO           # 운영 시 중요한 로그만
+
 
 
