--- a/class_workspace_spring_v7/build.gradle
+++ b/class_workspace_spring_v7/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+	// 유효성 검사 라이브러리 추가
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
